<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="todo"
            type="com.example.todoappkpc.model.Todo" />
        <variable
            name="radioListener"
            type="com.example.todoappkpc.view.FragmentEditTodoInterface" />
        <variable
            name="savelistener"
            type="com.example.todoappkpc.view.FragmentEditTodoInterface" />
        <variable
            name="dateListener"
            type="com.example.todoappkpc.view.DateClickListener" />
        <variable
            name="timeListener"
            type="com.example.todoappkpc.view.TimeClickListener" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateTodoFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtJudulTodo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/newTodo"
                    android:textSize="50sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="32dp"
                    android:hint="Enter Todo Title"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtJudulTodo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={todo.title}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutNotes"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="Enter Notes"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="@+id/txtInputLayoutTitle"
                    app:layout_constraintStart_toStartOf="@+id/txtInputLayoutTitle"
                    app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={todo.notes}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{(view) -> savelistener.onTodoSaveClick(view, todo)}"
                    android:text="@string/addBtn"
                    app:layout_constraintEnd_toEndOf="@+id/inputLayoutTime"
                    app:layout_constraintStart_toStartOf="@+id/inputLayoutTime"
                    app:layout_constraintTop_toBottomOf="@+id/inputLayoutTime" />

                <RadioGroup
                    android:id="@+id/radioGroupPriority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/txtInputLayoutNotes"
                    app:layout_constraintStart_toStartOf="@+id/txtInputLayoutNotes"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <RadioButton
                        android:id="@+id/radioHigh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{todo.priority==3?true:false}"
                        android:onClick="@{(view) -> radioListener.onRadioClick(view, todo)}"
                        android:tag="3"
                        android:text="@string/radioHigh" />

                    <RadioButton
                        android:id="@+id/radioMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{todo.priority==2?true:false}"
                        android:onClick="@{(view) -> radioListener.onRadioClick(view, todo)}"
                        android:tag="2"
                        android:text="@string/radioMedium" />

                    <RadioButton
                        android:id="@+id/radioLow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{todo.priority==1?true:false}"
                        android:onClick="@{(view) -> radioListener.onRadioClick(view, todo)}"
                        android:tag="1"
                        android:text="@string/radioLow" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/priority"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/txtInputLayoutNotes"
                    app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutNotes" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:enabled="true"
                    android:focusable="false"
                    app:endIconDrawable="@drawable/baseline_calendar_month_24"
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="@+id/radioGroupPriority"
                    app:layout_constraintStart_toStartOf="@+id/radioGroupPriority"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtDate"
                        android:onClick="@{dateListener::onDateClick}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Pick A Date" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    app:endIconDrawable="@drawable/baseline_access_time_24"
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="@+id/inputLayoutDate"
                    app:layout_constraintStart_toStartOf="@+id/inputLayoutDate"
                    app:layout_constraintTop_toBottomOf="@+id/inputLayoutDate">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTime"
                        android:onClick="@{timeListener::onTimeClick}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Pick A time" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </FrameLayout>
</layout>